backend/k8s/auth-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: guckguck/auth-service:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  # type: LoadBalancer
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: auth-service
