backend/k8s/data-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-service
  template:
    metadata:
      labels:
        app: data-service
    spec:
      containers:
      - name: data-service
        image: guckguck/data-service:latest
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  # type: LoadBalancer
  ports:
  - port: 3003
    targetPort: 3003
  selector:
    app: data-service
