backend/k8s/video-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
    spec:
      containers:
      - name: video-service
        image: guckguck/video-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  # type: LoadBalancer
  ports:
  - port: 3002
    targetPort: 3002
  selector:
    app: video-service
