backend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: com-hub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Might add more annotations here
spec:
  rules:
  - host: com-hub.byte-jumper.de
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /api/data
        pathType: Prefix
        backend:
          service:
            name: data-service
            port:
              number: 3003
      - path: /api/video
        pathType: Prefix
        backend:
          service:
            name: video-service
            port:
              number: 3002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - your-domain.com
  #   secretName: tls-secret
